Fixed ustakala pages

--- a/ustakala.html
+++ b/ustakala.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>youshouldbehair</title>
+  <title>ustakala</title>
   <link rel="stylesheet" href="css/project.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Style block for project-specific colors -->
@@ -98,12 +98,15 @@
         </div>
         <div class="overview-container">
           <div class="overview-text">
-            <p>This project started with my curiosity about why AI does not recognize the term "ustakala". I realized that AI models are trained on vast datasets, but they may lack knowledge of niche or culturally specific terms like "ustakala". This project explores ways to bridge that gap by integrating such unique terms into AI training data and models.</p>
+            <p>This project began with my curiosity about why AI fails to recognize the term Ustakala, a traditional Indian craft rooted in meticulous hand-based gold foiling. Despite being trained on massive datasets, AI often overlooks niche, region-specific knowledge like this.<br><br>
+
+Alongside this inquiry, the project builds on my earlier collaborations with Ustakala artisans, where I reimagined how their visual language could live on contemporary products. Using AI-driven product visualization, the project enables artisans to preview their motifs on modern objects before production, supporting faster iteration and creative experimentation.
+Ultimately, the work proposes a bridge between craftsmanship and technology by preserving cultural detail that is often lost in mainstream datasets while expanding the possibilities for modern applications of traditional craft.</p>
           </div>
         </div>
       </div>
     </div>
-
+<|fim_middle|><|fim_middle|>
     <!-- PROJECT IMAGES -->
     <div class="project-images">
       <div class="full-width-image">
@@ -162,8 +165,8 @@
                 <div class="bts-item">
                   <div class="bts-text">
                     <li>
-                      <span class="bts-number">2. learning model training practically and theoretically<br></span>
-                      <span class="bts-description">Trained ustakala Invoke AI model with 20 images of ustakala</span>
+                      <span class="bts-number">2. training model in invoke<br></span>
+                      <span class="bts-description">I trained a custom LoRA model using a 20-image Ustakala dataset and tailored prompts to capture the craft’s visual nuances. This allowed the system to generate outputs that more accurately reflected the traditional motifs and techniques.</span>
 
                       <span class="bts-description"></span>
                     </li>
@@ -179,6 +182,8 @@
                   <div class="bts-text">
                     <li>
                       <span class="bts-number">3. initial generations<br></span>
+                      <span class="bts-description">I experimented across multiple generative tools, starting with InvokeAI. By shifting between platforms and testing different approaches, I developed my own workflow that allowed me to shape the final outcome with greater clarity and control.</span>
+
                   </div>
                   <div class="bts-images">
                     <div class="bts-image">
